--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "cryptoguard_v1": "file:..",
+    "cryptojs": "^2.5.3",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
